# COP3503C-Notes

./: .gitignore  README.md
Week10_Makefile/: CMakeLists.txt  README.md
Week10_Makefile/example-makefiles/: compiling_demo_makefile  intro_demo_makefile
Week11_Inheritance/: CMakeLists.txt  cil_optimization.cpp  constructor_initializer.cpp  diamond_problem.cpp  virtual_override.cpp
Week11_Inheritance/final_examples/: abstract_base_class.txt  constructor_initializer.txt
Week3 Classes/: College.cpp  College.h
Week3_Classes/: main.cpp
Week4_Ptrs/: .gitignore  CMakeLists.txt  main.cpp  new_demo.cpp  pass_by_examples.cpp  pointers.cpp  ref.cpp
Week5_Big3/: CMakeLists.txt  bigThree.cpp  bigThree_dynamicMem.cpp  templates.cpp
Week6_LinkedLists/: CMakeLists.txt  exam.cpp  node.cpp  template.cpp  template.h
Week9_FileIO/: CMakeLists.txt  hello.cpp  main.cpp
